Feature: erd에 맞춰 sql수정
