# src/main/java/com/plip/video/domain/model/Video.java
@@ -1,6 +1,5 @@
 package com.plip.video.domain.model;
 
-import com.plip.video.domain.model.enums.VideoProcessingStatus;
 import lombok.Builder;
 import lombok.Getter;
 
@@ -16,11 +15,9 @@ public class Video {
 	private final UUID userUuid;
 	private final String caption;
 	private final String filePath;
+	private final String processedPath;
 	private final long fileSizeByte;
 	private final String thumbnailImagePath;
-	private final LocalDateTime recordedAt;
-	private final VideoProcessingStatus processingStatus;
-	private final String processedFilePath;
 	private final LocalDateTime createdAt;
 	private final LocalDateTime updatedAt;
 	private final LocalDateTime deletedAt;
@@ -30,8 +27,6 @@ public class Video {
 	}
 
 	public boolean isDownloadReady() {
-		return processingStatus == VideoProcessingStatus.READY
-				&& processedFilePath != null
-				&& !processedFilePath.isBlank();
+		return processedPath != null && !processedPath.isBlank();
 	}
 }
