# src/main/java/com/plip/video/domain/model/enums/VideoProcessingStatus.java
@@ -1,8 +1,0 @@
-package com.plip.video.domain.model.enums;
-
-public enum VideoProcessingStatus {
-	PENDING,
-	PROCESSING,
-	READY,
-	FAILED
-}
